Update stratServer.bat